# A-PAULO

./: .gitattributes  .gitignore  APAULO.html  APAULO.xlsx  APAULOFIXED.xlsx  APAULOFIXED_1.01_beznr.xlsx  Pomoc Indywidualna.xlsx  README.md  Wymagania aplikacji aPaulo od strony pomocy indywidualnej.docx  a paulo punkty.txt  aPaulo_REKRUTACJA_FINAL.html  aPaulo_WITH_CRUD.html  apaulo python.rar  apaulo_recruitment_clubs_wdrażanie.html  apaulo_supabase_migration.sql
backend/: README.md  alembic.ini  conftest.py  pyproject.toml  requirements.txt  test_phone.py
backend/alembic/: README.md  env.py
backend/alembic/versions/: 20260619_090014_3a853d2d6c75_init_revision.py  20260621_000001_pap64_volunteer_function.py  20260621_000002_pap64_functions_catalog.py  20260626_000001_pap53_attachments.py  20260628_000002_pap59_recruitment.py  20260628_000003_pap59_invitation_tokens.py  20260628_135023_ad32b859cb2d_preserve_attachments_on_domain_deletion.py  20260630_000004_pap59_static_recruitment.py  20260630_000005_pap58_permissions.py  20260630_000006_pap49_calendar.py  20260630_210813_1d79afa0041b_baseline_current_schema.py  20260630_230000_pap29_departure_interviews.py  20260701_154757_cd317ee086f0_baseline_current_schema.py  20260702_000007_pap59_onboarding_meetings.py  20260705_000001_pap78_audit_events.py  20260706_000001_pap84_departments.py  20260707_000001_pap83_bug_reports.py  20260707_000002_pap89_tasks.py  20260709_000001_pap87_email_verification.py  20260709_000001_pap96_submit_permissions.py  20260710_000001_pap91_department_membership.py  20260711_000001_pap87_email_verification.py  20260712_000001_pap92_department_inventory.py  20260712_000002_pap90_beneficiary_recruitment.py  20260713_000001_pap98_production_baseline.py
backend/api/: models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/app/: main.py  seed_roles.py
backend/authentication/: models.py  serializers.py  urls.py  views.py
backend/beneficiaries/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/core/: settings.py  urls.py
backend/groups/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/scripts/: __init__.py  reset_schemas.py  seed_required_data.py  seed_sample_data.py  verify_schema.py
backend/volunteers/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
(+479 files in other folders)
